# mkdocs-training

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-install.sh
docs/: .nav.yml  Social Media Posts  index.md  more_content.md  robots.txt  version.hidden.md
docs/assets/javascripts/: extra.js
docs/assets/stylesheets/: extra.css
mkdocs/includes/: abbreviations.md
mkdocs/overrides/: home.html  main.html  sitemap.xml
mkdocs/overrides/partials/: header.html
