[tool.poetry]
package-mode = false
name = "mkdocs=training"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "N", "UP",
          "SIM", "YTT", "ASYNC", "S", "A", "COM", "FBT",
          "C4", "DTZ", "T10", "EM", "DJ", "EXE", "ISC",
          "ICN", "LOG", "G", "INP", "PIE", "PT", "RSE",
          "SLF", "TCH", "INT", "PD", "TRY", "PERF1", "PERF4",
          "FURB", "RUF"]

# Recommended ignore list: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["E111", "E114", "E117", "D206", "D300", "Q000",
          "Q001", "Q002", "Q003", "COM812", "COM819",
          "ISC001", "ISC002", "S311"]

# Ignore some rules for tests
# https://github.com/astral-sh/ruff/issues/4368#issue-1705468153
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "FBT"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
minversion = "8.3"
required_plugins = ["pytest-cov"]
pythonpath = ["src"]
addopts = "-rA --showlocals --color=yes --tb=short -q --cov-report=html"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
branch = true # Could be an issue if true for native decoration: https://github.com/microsoft/vscode-python/issues/24156

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.docs.dependencies]
mkdocs = "~1.6.1"
mkdocs-awesome-nav = "~3.0.0"
mkdocs-autorefs = "~1.4.1"
mkdocstrings = "~0.29.1"
mkdocstrings-python = "~1.16.10"
mkdocs-redirects = "~1.2.2"
mkdocs-minify-plugin = "~0.8.0"
mkdocs-rss-plugin = "~1.17.1"
mkdocs-git-committers-plugin-2 = "~2.5.0"
mkdocs-material = {extras = ["imaging"], version = "~9.6.12"}
markdown-include = "~0.8.1"
markdown-callouts = "~0.4.0"
mkdocs-exclude = "~1.0.2"
vcrpy = "~7.0.0"
click = "~8.1.8"
ruff = "~0.11.8"
jupyter = "~1.1.1"
mkdocs-htmlproofer-plugin = "~1.3.0"
mkdocs-macros-plugin = "~1.3.7"
scoping = "0.1.2"

[tool.poetry.group.test.dependencies]
pytest = "~8.3.5"
pytest-asyncio = "~0.25.3"
pytest-timeout = "~2.3.1"
pytest-cov = "~6.0.0"
pytest-xdist = "~3.6.1"
doppler-env = "~0.3.1"

[tool.poetry.group.dev.dependencies]
bandit = "~1.8.3"
deptry = "~0.23.0"
ipykernel = "~6.29.5"
